feat(product): 类目绑定品牌接口。
Refs: FM-002 的 F4。